# petalbrowser

./: Cargo.toml  README.md
src/: config.rs  ipc.rs  main.rs
src/engine/: builder.rs
src/fsm/: tab_manager.rs
src/memory/: os_trim.rs
src/network/: adblock.rs
src/ui/: font.rs  mod.rs  omnibox.rs  settings.rs
