[package]
name = "petal_browser"
version = "0.1.0"
edition = "2021"
description = "O navegador com o footprint residente de RAM mais restrito já concebido."
authors = ["Petal Architect"]
publish = false

[dependencies]
# Motor Webview Nativo
wry = "0.35"

# Criação de Janela via winit 0.29 (raw-window-handle 0.5 nativo, compatível com wry 0.35)
winit = { version = "0.29", features = ["rwh_05"] }

crossbeam-channel = "0.5"


# Descarte da WebView e Renderização Estática
softbuffer = "0.3"
arboard = "3.6.1"
image = { version = "0.24", default-features = false, features = ["png"] }


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security"
] }
windows-core = "0.52"
webview2-com = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
